--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,8 @@
     <h2>About Me</h2>
     <img src="images-20230625_205804_607.jpg" alt="image" class="profile-pic">
 
-    <p>Hello! I am a web developer passionate about building clean and functional websites.</p>
+    <p>👋 I am a web developer passionate about building clean and functional websites
+     proficient with Hmtl and Css JavaScript  python and prompt engineer.</p>
   </section>
 
   <section id="education background">
